[workspace]
members = [
    "contracts/cep18-token",
    "contracts/ecto-token",
    "contracts/usdc-token",
    "contracts/weth-token",
    "contracts/wbtc-token",
    "contracts/factory",
    "contracts/router",
    "contracts/pair",
    "contracts/test-minimal",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
casper-contract = "5.1.1"
casper-types = "6.1.0"

[profile.release]
codegen-units = 1
lto = true
